# mayhem-rs

./: Cargo.toml  TODO
assets/: creatures.ron
src/: board.rs  choosespell.rs  constants.rs  creature.rs  cursor.rs  display.rs  game.rs  gamestate.rs  lib.rs  main.rs  menu.rs  player.rs  screen.rs  spell.rs  system.rs  vec.rs
src/screen/: board.rs  help.rs  menu.rs  playermenu.rs  spellcasting.rs  turnmenu.rs
