[package]
name = "mayhem-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"

